<resources>
    <string name="app_name">ExerGen</string>
    <string name="timer_default">00:00</string>
    <string name="timer_ready">GET READY</string>
    <string name="timer_paused">PAUSED</string>
    <string name="timer_work">WORK!</string>
    <string name="timer_rest">REST</string>
    <string name="timer_done">Done!</string>
    <string name="btn_start">Begin</string>
    <string name="btn_resume">Resume</string>
</resources>